[package]
name = "fastperm"
description = "A dead-simple, extreme fast permission flag system for Rust."
authors = ["pan93412 <pan93412@gmail.com>"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
